@@ -1,7 +1,7 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
-group = "de.rtrx.a"
-version = "0.1"
+group = "de.rtrx.a.tihi"
+version = "1.0"
 
 plugins {
     application
@@ -10,6 +10,7 @@ plugins {
     id ("com.bmuschko.docker-remote-api") version("5.2.0")
     id("com.bmuschko.docker-java-application") version "5.2.0"
     kotlin("jvm") version "1.3.72"
+    `maven-publish`
 
 }
 
@@ -18,7 +19,7 @@ repositories {
 
     maven {
         name = "GithubPackages"
-        url = uri("https://maven.pkg.github.com/Artraxon/unexbot")
+        url = uri("https://maven.pkg.github.com/Artraxon/tihibot")
         credentials {
             credentials {
                 val GITHUB_USER: String by project
@@ -36,7 +37,7 @@ repositories {
 dependencies {
     implementation(platform("org.jetbrains.kotlin:kotlin-bom"))
     implementation(kotlin("stdlib"))
-    implementation("de.rtrx.a:unexBot:2.2.6")
+    implementation("de.rtrx.a:unexBot:2.2.10")
     implementation(kotlin("stdlib-jdk8"))
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.3.1")
@@ -70,8 +71,7 @@ tasks.test {
     useJUnitPlatform()
 }
 application {
-    mainClassName = "de.rtrx.a.MainKt"
-    applicationDefaultJvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    mainClassName = "de.rtrx.a.tihi.MainKt"
 }
 
 val compileKotlin: KotlinCompile by tasks
@@ -81,4 +81,47 @@ compileKotlin.kotlinOptions {
 val compileTestKotlin: KotlinCompile by tasks
 compileTestKotlin.kotlinOptions {
     jvmTarget = "1.8"
+}
+
+docker {
+
+    registryCredentials {
+        val GITHUB_USER: String by project
+        val GITHUB_TOKEN: String by project
+
+        username.set(GITHUB_USER)
+        password.set(GITHUB_TOKEN)
+        url.set("docker.pkg.github.com")
+    }
+
+    javaApplication {
+        //TODO Find a better way to configure logging
+        //this.jvmArgs.set(listOf("-Djava.util.logging.config.file=/app/resources/logging.properties]"))
+        ports.set(listOf<Int>())
+        baseImage.set("openjdk:8")
+        maintainer.set("Artraxon a@rtrx.de")
+        tag.set("docker.pkg.github.com/artraxon/tihibot/tihi-image:${project.version}")
+    }
+}
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/artraxon/tihibot")
+            credentials {
+                val GITHUB_USER: String by project
+                val GITHUB_TOKEN: String by project
+
+                username = GITHUB_USER
+                password = GITHUB_TOKEN
+            }
+        }
+    }
+    publications {
+        register<MavenPublication>("gpr") {
+            artifactId = "tihibot"
+            groupId = "de.rtrx.a.tihi"
+            from(components["kotlin"])
+        }
+    }
 }
